crates/carta/tests/snapshots/golden_e2e__html__latex__footnotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A sentence with a footnote\footnote{The first note.} and a second
one\footnote{The second note has two paragraphs.

  This is the second.}.
