crates/carta/tests/snapshots/golden_e2e__html__latex__task-list.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{itemize}
\tightlist
\item
  {[}x{]} A completed task
\item
  {[} {]} A pending task
\end{itemize}
